[package]
name = "hyper-sse"
version = "0.1.0"
authors = ["Klemens Schölhorn <klemens@schoelhorn.eu>"]
description = "Server-Sent Events (SSE) library for hyper and Rocket"
documentation = "https://docs.rs/hyper-sse"
repository = "https://github.com/klemens/hyper-sse"
readme = "README.md"
categories = ["network-programming"]
license = "Apache-2.0/MIT"

[dependencies]
# Use cookie 0.9 to be compatible with rocket
cookie = { version = "0.9.1", features = ["secure"] }
futures = "0.1"
hyper = "0.12"
serde = "1"
serde_json = "1"
tokio = "0.1"

[dev-dependencies]
lazy_static = "1"
